--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
-  "name": "mysql-api",
+  "name": "recipe-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Recipe Node.js with Rest API",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --",
+    "start": "node server.js",
+    "bundle": "mkdir deploy && cp -r app server.js package.json package-lock.json recipe-backend.service .env deploy"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "node.js",
+    "express",
+    "sequelize"
+  ],
+  "author": "cs",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "body-parser": "^2.2.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "mysql2": "^3.14.1",
-    "sequelize": "^6.37.7"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "googleapis": "^118.0.0",
+    "jest": "^29.3.1",
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.2.3",
+    "parse": "^4.0.1",
+    "sequelize": "^6.19.0",
+    "supertest": "^6.3.3"
   }
 }
