--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,11 +27,11 @@ jobs:
 
       - run: |
           touch .env
-          echo DB_HOST = "$AWS_DB_HOST" >> .env
-          echo DB_PW = "$AWS_DB_PW" >> .env
-          echo DB_USER = "$AWS_DB_USER" >> .env
-          echo DB_NAME = "$AWS_DB_NAME" >> .env
-          echo SECRET_KEY = "$AWS_SECRET_KEY" >> .env
+          echo DB_HOST = "$DB_HOST" >> .env
+          echo DB_PW = "$DB_PW" >> .env
+          echo DB_USER = "$DB_USER" >> .env
+          echo DB_NAME = "$DB_NAME" >> .env
+          echo SECRET_KEY = "$SECRET_KEY" >> .env
           echo RECOMMENDATIONS_API_KEY = "$RECOMMENDATIONS_API_KEY" >> .env
 
       - run: npm run bundle
